Contentbox 1472 ensure visibility of menu toggle (#556)
* Added variables for sidebar widths.

* Added layout partial to contain any layout styling.

* Replaced section with main, to identify the main content of the page.

* Added class to header to use for styling.

* Replaced section with div, since it is not a major landmark.

* Added breakpoint mixin to increase consistency and facilitate changes with breakpoints.

* Increased the width for the breakpoint that will display the mobile view.

* Moved definitions related to the sidebar from "contentbox.scss" to the sidebar partial.  Adjusted styles to make sidebar responsive.

* Apply cfformat changes

--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/contentbox.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/contentbox.scss
@@ -119,7 +119,9 @@ p{
 		margin-top: -10px;
 	}
 }
-
+.header-default {
+	grid-area: header;
+}
 /******************** LOGIN WRAPPERS ****************************/
 
 #login-wrapper{
@@ -134,6 +136,7 @@ p{
 /******************** MAIN CONTENT Wrappers ****************************/
 
 .main-content-wrapper {
+	grid-area: main;
 	#main-content {
 		padding: 20px;
 		background-color: #F1F2F7 !important;
@@ -148,68 +151,8 @@ p{
 }
 
 /******************** SIDEBAR ****************************/
-
-.sidebar {
-	min-height: auto;
-	padding-bottom: 15px;
-	.nav {
-		a {
-			font-size: 15px !important;
-		}
-		i {
-			margin-right: 15px;
-			font-size: 17px;
-		}
-		li > .nav-sub > li > a{
-			padding-left: 55px;
-		}
-	}
-}
-.sidebar-left{
-	box-shadow: 5px 8px 8px 1px #c6c3c3 !important;
-	background: white !important;
-	border-top: 1px solid #eaeaea !important;
-	border-right: 1px solid #c6c3c3 !important;
-	border-bottom-right-radius: 15px;
-	.nav-sub{
-		background: #d5dbe1 !important;
-	}
-	a, a:active{
-		color: rgb(100, 100, 100);
-	}
-	a:hover{
-		color: #32a644;
-	}
-	li > .nav-sub > li > a{
-		padding-left: 55px;
-	}
-	.nav-pills{
-		li{
-			a{
-				border-left: none;
-				padding-left: 20px;
-			}
-		}
-		li.active > a.dropdown-toggle, li.active > a.dropdown-toggle:focus, li.active > a.dropdown-toggle:hover{
-			border-left: solid 4px #1abc9c;
-		}
-	}
-	.active > a, .active > a:hover, .active > a:focus  {
-		color: #32a644;
-	}
-}
-
 /** Sidebar Mini */
 .sidebar-mini{
-
-	.sidebar{
-		opacity: 40%;
-		width: 50px;
-	}
-	.sidebar:hover, .sidebar:active, .sidebar:focus{
-		opacity: 100%;
-	}
-
 	.nav > li.nav-dropdown-open a,  .nav > li:hover a{
 		color: white;
 	}
@@ -221,13 +164,6 @@ p{
 		color: #32a644 !important;
 	}
 }
-.sidebar-mini > .sidebar > #profileSidebar{
-	display: none;
-}
-.sidebar-mini .sidebar+.main-content-wrapper{
-	margin-left: 60px
-}
-
 /******************** BREADCRUMBS ****************************/
 
 .breadcrumb{
@@ -1298,20 +1234,7 @@ table.diff {
 		display: none;
 	}
 }
-@media only screen and (max-width: 853px) {
-	.main-content-wrapper {
-		margin-left: 40px !important
-	}
-}
-@media only screen and (max-width: 766px) {
-	.main-content-wrapper {
-		margin-left: 0px !important
-	}
-}
 @media only screen and (max-width: 660px) {
-	.main-content-wrapper {
-		margin-left: 0 !important;
-	}
     #header{
 		.toggle-navigation.toggle-left{
 			float: none !important;
