--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_main-content.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_main-content.scss
@@ -6,7 +6,6 @@
 }
 
  .main-content-wrapper {
-    margin-left: 240px;
     margin-right: 0;
   @include transition(all, .3s,  ease-in-out);
     background: #f1f2f7;
