--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_media-queries.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_media-queries.scss
@@ -17,15 +17,9 @@
     #header .toggle-navigation.toggle-left {
         float:left;
     }
-    .sidebar {
-      left:-240px;
-    }
     .sidebar-toggle {
         margin-left:0;
         width:100%;
-    }
-    .main-content-wrapper {
-        margin-left:0;
     }
     .user-nav ul li {
         font-size:12px;
