--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_variables.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_variables.scss
@@ -16,6 +16,9 @@ $cb-base-spacer-sm: 1rem;
 $cb-base-spacer-md: 1.5rem;
 $cb-base-spacer-lg: 2rem;
 
+$cb-base-sidebar-width: 240px;
+$cb-base-sidebarmini-width: 50px;
+
 $cb-semantic-color-primary: $cb-base-color-green-kelly-20;
 $cb-semantic-color-primary-light: $cb-base-color-green-kelly-95;
 
